# 11hackb

./: .env_example  TODO.md  api.py  main.py  pyproject.toml  stitch.py  test_process.py
src/: define_cuts.py  ffmpeg.py  keyframe_analysis.py  stitch.py  voice_utils.py
