[project]
name = "11hackb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.26.1",
    "ffmpeg-python>=0.2.0",
    "openai>=2.9.0",
    "pillow>=10.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "loguru>=0.7.0",
]
